--- a/src/workforce-management/Views/TrainingProgram/Index.cshtml
+++ b/src/workforce-management/Views/TrainingProgram/Index.cshtml
@@ -8,6 +8,7 @@
         <tr>
             <th>Name</th>
             <th>Descriptions</th>
+            <th>Attendees</th>
         </tr>
     </thead>
     <tbody>
@@ -15,7 +16,8 @@
         {
             <tr>
                 <td><a asp-controller="TrainingProgram" asp-action="Detail" asp-route-id="@program.TrainingProgramId">@Html.DisplayFor(model => program.Name)</a></td>
-                <td>(@Html.DisplayFor(model => program.Description))</td>
+                <td>@Html.DisplayFor(model => program.Description)</td>
+                <td>@Html.DisplayFor(model => model.AttendeeCount[program.TrainingProgramId])</td>
             </tr>
         }
     </tbody>
