removed a rogue dollar sign from template

--- a/src/workforce-management/Views/TrainingProgram/Detail.cshtml
+++ b/src/workforce-management/Views/TrainingProgram/Detail.cshtml
@@ -11,7 +11,7 @@
     </div>
     <div class="col-md-3">
         <h5>Date Created:</h5>
-        <p>$@Html.DisplayFor(model => model.TrainingProgram.DateCreated)</p>
+        <p>@Html.DisplayFor(model => model.TrainingProgram.DateCreated)</p>
     </div>
 </div>
 
