Computer list and computer controller Index

--- a/src/workforce-management/Views/Computer/Index.cshtml
+++ b/src/workforce-management/Views/Computer/Index.cshtml
@@ -3,6 +3,8 @@
 
 <h2>Computers</h2>
 
+<input type="button" class="btn btn-primary" value="Add a new Computer" />
+
 <table class="table">
     <thead>
         <tr>
@@ -10,21 +12,22 @@
             <th>Make</th>
             <th>Model</th>
             <th>Employee</th>
-            <th></th>
+            <th>@* Empty cell where the delete button will go in each row *@</th>
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td colspan="5"><a href="">Add a new Computer</a></td>
-        </tr>
-        @foreach (Computer computer in Model.ComputerList)
+        @foreach (KeyValuePair<Computer, Employee> comp in Model.ComputerDictionary)
         {
+            Computer computer = comp.Key;
+            Employee employee = comp.Value;
             <tr>
-                <td>computer.SerialNumber</td>
-                <td>computer.Make</td>
-                <td>computer.Model</td>
-                <td>{computer.Employee ? computer.Employee : "Unassigned" }</td>
-                <td><span style="color:firebrick" class="glyphicon glyphicon-remove" aria-hidden="true"></span></td>
+                <td>@computer.SerialNumber.ToString()</td>
+                <td>@computer.Make.ToString()</td>
+                <td>@computer.Model.ToString()</td>
+                <td>
+                    @(employee != null ? employee.FirstName + " " + employee.LastName : "Unassigned")
+                </td>
+                <td><span style="color:firebrick" class="glyphicon glyphicon-remove" aria-hidden="true">X</span></td>
             </tr>
         }
     </tbody>
