--- a/src/workforce-management/Views/Department/Add.cshtml
+++ b/src/workforce-management/Views/Department/Add.cshtml
@@ -11,7 +11,7 @@
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="Department.Name" class="col-md-2 control-label"></label>
+            <label asp-for="NewDepartment.Name" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="NewDepartment.Name" class="form-control" placeholder="Department Name" />
                 <span asp-validation-for="NewDepartment.Name" class="text-danger"></span>
