Migrations and Database update

--- a/src/workforce-management/Views/TrainingProgram/Add.cshtml
+++ b/src/workforce-management/Views/TrainingProgram/Add.cshtml
@@ -20,13 +20,13 @@
                 <span asp-validation-for="NewTrainingProgram.Description" class="text-danger"></span>
             </div>
         </div>
-        <div class="form-group">
+        @*<div class="form-group">
             <label asp-for="NewTrainingProgram.EmployeeId" class="col-md-2 control-label">Product Type</label>
             <div class="col-md-10">
                 @Html.DropDownList("NewTrainingProgram.EmployeeId", (MultiSelectList)Model.Employees, "Asign Employees", new { multiple = "multiple" })
                 <span asp-validation-for="NewProduct.ProductSubTypeId" class="text-danger"></span>
             </div>
-        </div>
+        </div>*@
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Save New Training Program" class="btn btn-default" />
