--- a/src/workforce-management/Views/Computer/Index.cshtml
+++ b/src/workforce-management/Views/Computer/Index.cshtml
@@ -3,7 +3,7 @@
 
 <h2>Computers</h2>
 
-<input type="button" class="btn btn-primary" value="Add a new Computer" />
+<a asp-controller="Computer" asp-action="Add"><input type="submit" value="Add a new Computer" class="btn btn-primary" /></a>
 
 <table class="table">
     <thead>
