--- a/src/workforce-management/Views/TrainingProgram/Index.cshtml
+++ b/src/workforce-management/Views/TrainingProgram/Index.cshtml
@@ -2,6 +2,7 @@
 @using Bangazon.Models;
 
 <h2>Training Programs</h2>
+<a asp-controller="TrainingProgram" asp-action="Add"><input type="submit" value="Add a Training Program" class="btn btn-primary" /></a>
 
 <table class="table table-striped">
     <thead>
