Completed Computer Add form

--- a/src/workforce-management/Views/Computer/Add.cshtml
+++ b/src/workforce-management/Views/Computer/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model workforce_management.ViewModels.AddComputer
+﻿@model workforce_management.ViewModels.ComputerAdd
 
 @{
     ViewData["Title"] = "Add a New Computer";
