--- a/src/workforce-management/Views/Computer/Index.cshtml
+++ b/src/workforce-management/Views/Computer/Index.cshtml
@@ -3,7 +3,7 @@
 
 <h2>Computers</h2>
 
-<input type="button" class="btn btn-primary" value="Add a new Computer" />
+<a asp-controller="Computer" asp-action="Add"><input type="button" class="btn btn-primary" value="Add a new Computer" /></a>
 
 <table class="table">
     <thead>
@@ -27,7 +27,7 @@
                 <td>
                     @(employee != null ? employee.FirstName + " " + employee.LastName : "Unassigned")
                 </td>
-                <td><span style="color:firebrick" class="glyphicon glyphicon-remove" aria-hidden="true">X</span></td>
+                <td><span style="color:firebrick" class="glyphicon glyphicon-remove" aria-hidden="true"></span></td>
             </tr>
         }
     </tbody>
