--- a/src/workforce-management/Views/Department/Add.cshtml
+++ b/src/workforce-management/Views/Department/Add.cshtml
@@ -24,11 +24,16 @@
                 <span asp-validation-for="NewDepartment.Description" class="text-danger"></span>
             </div>
         </div>
-        <dl class="dropdown">
-            @Html.DropDownListFor(m => m.NewDepartment, Model.Employees, new { multiple = "true" })
-        </dl>
-            <input type="submit" value="Add New Department" class="btn btn-default" id="departmentBtn" />
-</div>
+        <div class="form-group">
+            <label asp-for="NewDepartment.Employees" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <dl class="dropdown">
+                    @Html.DropDownListFor(m => m.NewDepartment, Model.Employees, new { multiple = "true" })
+                </dl>            
+            </div>
+        </div>
+            <input type="submit" disabled value="Add New Department" class="btn btn-default" id="departmentBtn" />
+    </div>
 </form>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/js/site.min.js"></script>
