added description to view

--- a/src/workforce-management/Views/Department/Detail.cshtml
+++ b/src/workforce-management/Views/Department/Detail.cshtml
@@ -2,6 +2,7 @@
 @using Bangazon.Models;
 
 <h2>@Html.DisplayFor(model => model.Department.Name)</h2>
+<h5><i>@Html.DisplayFor(model => model.Department.Description)</i></h5>
 
 <table class="table table-striped">
     <thead>
