--- a/src/workforce-management/Views/Computer/Index.cshtml
+++ b/src/workforce-management/Views/Computer/Index.cshtml
@@ -5,6 +5,20 @@
 
 <a asp-controller="Computer" asp-action="Add"><input type="button" class="btn btn-primary" value="Add a new Computer" /></a>
 
+@if (ViewBag.ComputerDeleteError != null)
+{
+<div style="margin-top:15px" class="alert alert-danger" role="alert">
+    <span style="margin-right:5px" class="glyphicon glyphicon-alert" aria-hidden="true"></span>@ViewBag.ComputerDeleteError
+</div>
+}
+
+@if (ViewBag.ComputerDeleteSuccess != null)
+{
+    <div style="margin-top:15px" class="alert alert-success" role="alert">
+        <span style="margin-right:5px" class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>@ViewBag.ComputerDeleteSuccess
+    </div>
+}
+
 <table class="table">
     <thead>
         <tr>
@@ -27,7 +41,7 @@
                 <td>
                     @(employee != null ? employee.FirstName + " " + employee.LastName : "Unassigned")
                 </td>
-                <td><span style="color:firebrick" class="glyphicon glyphicon-remove" aria-hidden="true"></span></td>
+                <td><a asp-controller="Computer" asp-action="Delete" asp-route-id="@computer.ComputerId"><span style="color:firebrick" class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
             </tr>
         }
     </tbody>
