added additional buttons

--- a/src/workforce-management/Views/Computer/Index.cshtml
+++ b/src/workforce-management/Views/Computer/Index.cshtml
@@ -32,3 +32,5 @@
         }
     </tbody>
 </table>
+
+<a asp-controller="Computer" asp-action="Add"><input type="submit" value="Add a new Computer" class="btn btn-primary" /></a>
