--- a/src/workforce-management/Views/Employee/Index.cshtml
+++ b/src/workforce-management/Views/Employee/Index.cshtml
@@ -21,3 +21,5 @@
             }
     </tbody>
 </table>
+
+<a asp-controller="Employee" asp-action="Add"><input type="submit" value="Add an Employee" class="btn btn-primary" /></a>
