--- a/src/workforce-management/Views/TrainingProgram/Index.cshtml
+++ b/src/workforce-management/Views/TrainingProgram/Index.cshtml
@@ -23,3 +23,5 @@
         }
     </tbody>
 </table>
+
+<a asp-controller="TrainingProgram" asp-action="Add"><input type="submit" value="Add a Training Program" class="btn btn-primary" /></a>
