--- a/src/workforce-management/Views/Department/Index.cshtml
+++ b/src/workforce-management/Views/Department/Index.cshtml
@@ -23,3 +23,6 @@
     </tbody>
 </table>
 
+<a asp-controller="Department" asp-action="Add"><input type="submit" value="Add a Department" class="btn btn-primary" /></a>
+
+
