--- a/src/workforce-management/Views/Employee/Add.cshtml
+++ b/src/workforce-management/Views/Employee/Add.cshtml
@@ -52,7 +52,7 @@
         <div class="form-group">
             <label asp-for="EnrolledTraining" class="col-md-2 control-label">Training Programs</label>
             <div class="col-md-10">
-                @Html.DropDownList("EnrolledTraining", @Model.TrainingPrograms, "Select a Program", new { multiple = "true" })
+                @Html.ListBoxFor(m => m.EnrolledTraining, new MultiSelectList(Model.TrainingPrograms, "TrainingProgramId", "Name", null), new { @class = "form-control" })
             </div>
         </div>
         <div class="form-group">
