--- a/src/workforce-management/Views/Employee/Edit.cshtml
+++ b/src/workforce-management/Views/Employee/Edit.cshtml
@@ -3,7 +3,7 @@
 
 <h2>Edit an Employee</h2>
 
-<form asp-action="Add" id="employeeAdd">
+<form asp-action="Edit" id="employeeAdd">
     <div class="form-horizontal">
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -36,6 +36,19 @@
             </div>
         </div>
         <div class="form-group">
+            <label asp-for="Employee.EndDate" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                @if (Model.Employee == null || Model.Employee.EndDate == null)
+                {
+                    <input class="form-control" type="date" name="Employee.EndDate" id="Employee_EndDate" />
+                }
+                else
+                {
+                    <input class="form-control" type="date" name="Employee.EndDate" id="Employee_EndDate" value="@Model.Employee.EndDate.ToString("yyyy-MM-dd")" />
+                }
+            </div>
+        </div>
+        <div class="form-group">
             <label asp-for="Employee.DepartmentId" class="col-md-2 control-label">Department</label>
             <div class="col-md-10">
                 @Html.DropDownList("Employee.DepartmentId", @Model.Departments, "Select a Department")
@@ -52,13 +65,14 @@
         <div class="form-group">
             <label class="col-md-2 control-label">Current Computer</label>
             <div class="col-md-10">
-                @Html.DisplayFor(model => model.Employee.Computer.Model)
+                <input type="text" name="Employee.ComputerId" id="Employee_ComputerId" value="@Model.Employee.Computer.Model" disabled />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="EnrolledTraining" class="col-md-2 control-label">Training Programs</label>
+            <label asp-validation-for="" class="col-md-2 control-label">Training Programs</label>
             <div class="col-md-10">
-                @Html.DropDownList("EnrolledTraining", @Model.TrainingPrograms, "Select a Program", new { multiple = "true" })
+                <span class="text-danger"></span>
+                @Html.ListBoxFor(m => m.EnrolledTraining, new MultiSelectList(Model.TrainingPrograms, "TrainingProgramId", "Name", null), new { @class = "form-control" })
             </div>
         </div>
         <div class="form-group">
@@ -66,6 +80,7 @@
                 <input type="submit" value="Submit Changes" class="btn btn-default" id="employeeSubmit"/>
             </div>
         </div>
+        @Html.HiddenFor(e => e.Employee.EmployeeId)
     </div>
 </form>
 
