--- a/src/workforce-management/Views/Employee/Add.cshtml
+++ b/src/workforce-management/Views/Employee/Add.cshtml
@@ -45,7 +45,7 @@
         <div class="form-group">
             <label asp-for="Employee.ComputerId" class="col-md-2 control-label">Computer</label>
             <div class="col-md-10">
-                @Html.DropDownList("Employee.ComputerId", @Model.Computers, "Select a Department")
+                @Html.DropDownList("Employee.ComputerId", @Model.Computers, "Select a Computer")
                 <span asp-validation-for="Employee.ComputerId" class="text-danger"></span>
             </div>
         </div>
