fixed back link on edit form

--- a/src/workforce-management/Views/Employee/Edit.cshtml
+++ b/src/workforce-management/Views/Employee/Edit.cshtml
@@ -85,5 +85,5 @@
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Detail" asp-route-id="@Model.Employee.EmployeeId">Back to Detail</a>
 </div>
