--- a/src/workforce-management/Views/TrainingProgram/Edit.cshtml
+++ b/src/workforce-management/Views/TrainingProgram/Edit.cshtml
@@ -24,12 +24,14 @@
         </div>
 
         <div class="form-group">
-            <label asp-validation-for="" class="col-md-2 control-label">Selected Attendees</label>
+            <label asp-validation-for="Employees" class="col-md-2 control-label">Selected Attendees</label>
             <div class="col-md-10">
                 <span class="text-danger"></span>
                 @Html.ListBoxFor(m => m.selectedAttendees, new MultiSelectList(Model.Employees, "EmployeeId", "FirstName", null), new { @class = "form-control" })
             </div>
         </div>
+
+        @Html.Hidden("TrainingProgram.TrainingProgramId", Model.TrainingProgram.TrainingProgramId)
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
