--- a/src/workforce-management/Views/Employee/Edit.cshtml
+++ b/src/workforce-management/Views/Employee/Edit.cshtml
@@ -44,8 +44,8 @@
                 }
                 else
                 {
-                    <input class="form-control" type="date" name="Employee.EndDate" id="Employee_EndDate" value="@Model.Employee.EndDate.ToString("yyyy-MM-dd")" />
-                }
+                    <input class="form-control" type="date" name="Employee.EndDate" id="Employee_EndDate" value="@Model.Employee.EndDate.Value.ToString("yyyy-MM-dd")" />
+                } 
             </div>
         </div>
         <div class="form-group">
