--- a/src/workforce-management/Views/TrainingProgram/Add.cshtml
+++ b/src/workforce-management/Views/TrainingProgram/Add.cshtml
@@ -23,7 +23,8 @@
         <div class="form-group">
             <label asp-for="NewTrainingProgram.Attendees" class="col-md-2 control-label">Add Employee</label>
             <div class="col-md-10">
-                @Html.DropDownList("EmployeeIds", @Model.Employees, "Asign Employees")
+                @Html.DropDownList("EmployeeIds", @Model.Employees, "Asign Employees", new { multiple = "true" })
+                @*@Html.DropDownlist("EmployeeIds", @Model.Employees, "Select an Attendee", new { multiple = "true" })*@
                 <span asp-validation-for="NewTrainingProgram.Attendees" class="text-danger"></span>
             </div>
         </div>
@@ -34,5 +35,4 @@
             </div>
     </div>
 </form>
-                @*@Html.DropDownlist("EmployeeIds", @Model.Employees, "Select an Attendee", new { multiple = "true" })*@
 
