--- a/src/workforce-management/Views/TrainingProgram/Edit.cshtml
+++ b/src/workforce-management/Views/TrainingProgram/Edit.cshtml
@@ -27,7 +27,7 @@
             <label asp-validation-for="Employees" class="col-md-2 control-label">Selected Attendees</label>
             <div class="col-md-10">
                 <span class="text-danger"></span>
-                @Html.ListBoxFor(m => m.selectedAttendees, new MultiSelectList(Model.Employees, "EmployeeId", "FirstName", null), new { @class = "form-control" })
+                @Html.ListBoxFor(m => m.selectedAttendees, new MultiSelectList(Model.EmployeesFullName, "Key", "Value", null), new { @class = "form-control" })
             </div>
         </div>
 
