--- a/src/workforce-management/Views/Employee/Detail.cshtml
+++ b/src/workforce-management/Views/Employee/Detail.cshtml
@@ -1,19 +1,65 @@
 ﻿@model workforce_management.ViewModels.EmployeeDetail
 @using Bangazon.Models;
 
-<h2>@Html.DisplayFor(model => model.Employee.FirstName) @Html.DisplayFor(model => model.Employee.LastName)</h2>
+<h1>@Html.DisplayFor(model => model.Employee.FirstName) @Html.DisplayFor(model => model.Employee.LastName)
+    <a asp-action="Edit" asp-route-id="@Model.Employee.EmployeeId"><span style="color:dodgerblue;font-size:0.5em" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+</h1>
 
 <table class="table table-striped">
     <thead>
         <tr>
             <th>Employee Name</th>
-            <th>Computer Assigned</th>
+            <th colspan="3">Computer Assigned</th>
+            <th>Department</th>
+            <th>Start Date</th>
+            @if (Model.Employee.EndDate != null)
+            {
+                <th>End Date</th>
+            }
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td></td>
-            <td></td>
+            <td>@Html.DisplayFor(model => model.Employee.FirstName) @Html.DisplayFor(model => model.Employee.LastName)</td>
+            <td>@Html.DisplayFor(model => model.Employee.Computer.Make)</td>
+            <td>@Html.DisplayFor(model => model.Employee.Computer.Model)</td>
+            <td>SN: @Html.DisplayFor(model => model.Employee.Computer.SerialNumber)</td>
+            <td>@Html.DisplayFor(model=> model.Employee.Department.Name)</td>
+            <td>@Html.DisplayFor(model => model.Employee.StartDate)</td>
+            
+            @if (Model.Employee.EndDate != null)
+            {
+            <th>@Html.DisplayFor(model => model.Employee.EndDate)</th>
+            }
         </tr>
     </tbody>
 </table>
+
+<hr/>
+
+<h3>Training Programs</h3>
+@if (Model.TrainingPrograms.Count > 0)
+{
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Program Name</th>
+            <th>Description</th>
+        </tr>
+    </thead>
+    <tbody>
+
+        @foreach (var program in Model.TrainingPrograms)
+        {
+        <tr>
+            <td>@program.Name</td>
+            <td>@program.Description</td>
+        </tr>
+        }
+    </tbody>
+</table>
+}
+else
+{
+    <p>Not enrolled in any <a asp-controller="TrainingProgram" asp-action="Index">training programs</a>.</p>
+}
