--- a/src/workforce-management/Views/Employee/Detail.cshtml
+++ b/src/workforce-management/Views/Employee/Detail.cshtml
@@ -12,7 +12,7 @@
             <th colspan="3">Computer Assigned</th>
             <th>Department</th>
             <th>Start Date</th>
-            @if (Model.Employee.EndDate != null)
+            @if (Model.Employee.EndDate != DateTime.MinValue)
             {
                 <th>End Date</th>
             }
@@ -27,7 +27,7 @@
             <td>@Html.DisplayFor(model=> model.Employee.Department.Name)</td>
             <td>@Html.DisplayFor(model => model.Employee.StartDate)</td>
             
-            @if (Model.Employee.EndDate != null)
+            @if (Model.Employee.EndDate != DateTime.MinValue)
             {
             <th>@Html.DisplayFor(model => model.Employee.EndDate)</th>
             }
