--- a/src/workforce-management/Views/Computer/Edit.cshtml
+++ b/src/workforce-management/Views/Computer/Edit.cshtml
@@ -38,7 +38,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save Changes" class="btn btn-default" id="computerAddBtn" disabled="true" />
+                <input type="submit" value="Save Changes" class="btn btn-default" id="computerAddBtn" />
             </div>
         </div>
     </div>
