--- a/src/workforce-management/Views/Department/Edit.cshtml
+++ b/src/workforce-management/Views/Department/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model workforce_management.ViewModels.SingleDepartment
+﻿@model workforce_management.ViewModels.EditDepartment
 @using Bangazon.Models;
 @{
     ViewData["Title"] = "Edit a Department";
@@ -6,33 +6,34 @@
 
 <h2>@ViewData["Title"]</h2>
 
-<form asp-controller="Department" asp-action="Edit">
+<form asp-action="Edit">
     <div class="form-horizontal">
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="EditDepartment.Name" class="col-md-2 control-label"></label>
+            <label asp-for="editDepartment.Name" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="EditDepartment.Name" class="form-control departmentName" placeholder="Department Name" />
-                <span asp-validation-for="EditDepartment.Name" class="text-danger"></span>
+                <input asp-for="editDepartment.Name" class="form-control departmentName" placeholder="Department Name" />
+                <span asp-validation-for="editDepartment.Name" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="EditDepartment.Description" class="col-md-2 control-label"></label>
+            <label asp-for="editDepartment.Description" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="EditDepartment.Description" class="form-control departmentDescription" placeholder="Department Description" />
-                <span asp-validation-for="EditDepartment.Description" class="text-danger"></span>
+                <input asp-for="editDepartment.Description" class="form-control departmentDescription" placeholder="Department Description" />
+                <span asp-validation-for="editDepartment.Description" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="EditDepartment.Employees" class="col-md-2 control-label"></label>
+            <label asp-for="editDepartment.Employees" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <dl class="dropdown">
-                    @Html.DropDownList("EmployeeIds", @Model.Employees, "Add an Employee", new { multiple = "true" }) 
+                    @Html.DropDownList("editDepartment.EmployeeIds", @Model.Employees, "Add an Employee", new { multiple = "true" }) 
 
                 </dl>
             </div>
         </div>
-        <input type="submit" disabled value="Edit Department" class="btn btn-default" id="departmentBtn" />
+        @Html.Hidden("editDepartment.DepartmentId", Model.editDepartment.DepartmentId);
+        <input type="submit" value="Edit Department" class="btn btn-default" id="departmentBtn" />
     </div>
 </form>
