58-editComputerForm - Edit a Computer (#65)
* Form prepopulating with correct info. Submit is broken

* Kraatz changes

--- a/src/workforce-management/Views/Computer/Index.cshtml
+++ b/src/workforce-management/Views/Computer/Index.cshtml
@@ -26,6 +26,7 @@
             <th>Make</th>
             <th>Model</th>
             <th>Employee</th>
+            <th>@* Empty cell where the edit button will go in each row *@</th>
             <th>@* Empty cell where the delete button will go in each row *@</th>
         </tr>
     </thead>
@@ -48,7 +49,7 @@
                         @("Unassigned");
                     }
                 </td>
-
+                <td><a asp-action="Edit" asp-route-id="@computer.ComputerId"><input type="button" value="Edit" class="btn btn-primary"></a></td>
                 <td><a asp-controller="Computer" asp-action="Delete" asp-route-id="@computer.ComputerId"><span style="color:firebrick" class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
             </tr>
         }
