--- a/src/workforce-management/Views/Employee/Index.cshtml
+++ b/src/workforce-management/Views/Employee/Index.cshtml
@@ -9,16 +9,14 @@
         <tr>
             <th>Name</th>
             <th>Department</th>
-            <th>Details</th>
         </tr>
     </thead>
     <tbody>
         @foreach (Employee employee in @Model.Employees)
             { 
                 <tr>
-                    <td>@Html.DisplayFor(model => employee.FirstName)</td>
+                    <td><a asp-action="Detail" asp-route-id="@employee.EmployeeId">@Html.DisplayFor(model => employee.FirstName) @Html.DisplayFor(model => employee.LastName)</a></td>
                     <td>@Html.DisplayFor(model => employee.Department.Name)</td>
-                    <td><a class="btn btn-primary btn-xs" asp-controller="Employee" asp-action="Detail" asp-route-id="@employee.EmployeeId">Details</a></td>
                 </tr>
             }
     </tbody>
