fixed employee edit bug and footer

--- a/src/workforce-management/Views/Shared/_Layout.cshtml
+++ b/src/workforce-management/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer class="footer navbar-fixed-bottom text-center" style="color: #F0FFFF">
+        <footer class="footer navbar-fixed-bottom text-center" style="color: #222">
             <p>&copy; @DateTime.Now.Year - BangazonWeb - Team Charles</p>
         </footer>
     </div>
